# git-remote-fetcher

./: Cargo.toml  readme.md
.github/workflows/: ci.yml
src/: main.rs
