[package]
name = "git-remote-fetcher"
version = "0.1.0"
authors = ["Marais Rossouw <me@maraisr.com>"]
publish = false
edition = "2018"

[[bin]]
name = "git-remote-fetcher"
path = "src/main.rs"
doc = false

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"

[dependencies]
clap = "2.33"
git2 = "0.10"
futures = { version ="0.3", features = [] }