[package]
name = "git-remote-fetcher"
description = "A utility that fetches all remotes for all git roots south of a given location."
license = "MIT"
version = "0.1.0"
authors = ["Marais Rossouw <me@marais.io>"]
publish = true
edition = "2018"

[[bin]]
name = "git-remote-fetcher"
path = "src/main.rs"
doc = false

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "abort"

[dependencies]
clap = "2.33"
git2 = "0.10"
